<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardBackgroundColor="#CCFFFFFF"
    android:elevation="6dp"
    android:layout_marginBottom="2dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/list_item_pesquisa_txt_origem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="30dp"
                android:padding="5dp"
                android:text="CNF" />

            <TextView
                android:id="@+id/list_item_pesquisa_txt_destino"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:padding="5dp"
                android:text="GRU" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/list_item_pesquisa_txt_horario_saida"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:paddingRight="5dp"
                android:paddingLeft="5dp"
                android:text="13:30" />

            <View
                android:layout_width="20dip"
                android:layout_height="2dip"
                android:layout_gravity="center_vertical"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:background="#000000" />

            <TextView
                android:id="@+id/list_item_pesquisa_txt_horario_chegada"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:paddingRight="5dp"
                android:paddingLeft="5dp"
                android:text="15:55" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/list_item_pesquisa_txt_tempo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="1h30, " />

            <TextView
                android:id="@+id/list_item_pesquisa_txt_qnt_paradas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="1"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text=" parada" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:gravity="end"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="R$" />

            <TextView
                android:id="@+id/list_item_pesquisa_txt_valor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="144,50"
                android:textSize="24dp"/>

            </LinearLayout>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/list_item_pesquisa_btn_comprar"
                style="@style/SuperRaisedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Comprar" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/valor_total_taxas" />

        </LinearLayout>


    </LinearLayout>
</android.support.v7.widget.CardView>